--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-gesture-handler": "^2.3.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-paper": "^4.12.0",
     "react-native-reanimated": "^2.6.0",
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^4.2.4",
