Api requests added

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-IMAGE_URL="https://controller5.s3.us-west-1.amazonaws.com/images"
+IMAGE_URL=https://controller5.s3.us-west-1.amazonaws.com/images
+API_URL=http://ec2-13-57-210-200.us-west-1.compute.amazonaws.com/doorbox/api/Mobile/
