--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "remote-redux-devtools": "^0.5.16",
     "styled-components": "^5.2.0",
     "yup": "^0.32.11"
   },
