--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
+    "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
