--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -285,8 +285,6 @@ dependencies {
     implementation 'com.facebook.fresco:animated-webp:2.5.0'
     implementation 'com.facebook.fresco:webpsupport:2.5.0'
 
-    implementation project(':react-native-splash-screen')
-
     // For WebP support, without animations
     implementation 'com.facebook.fresco:webpsupport:2.5.0'
 
@@ -299,8 +297,8 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    implementation "androidx.core:core-splashscreen:1.0.0-beta01"
 
-    implementation project(':react-native-fbsdk-next')
     implementation project(':react-native-vector-icons')
     
     implementation 'com.facebook.android:facebook-android-sdk:latest.release'
