--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest",
     "lint": "eslint .",
     "android:release": "cd android && ./gradlew assembleRelease && cd ../",
-    "android:clean": "cd android && ./gradlew clean && cd ../"
+    "android:clean": "cd android && ./gradlew clean && cd ../",
+    "add-splash": "yarn react-native generate-bootsplash assets/bootsplash_logo_original.png --background-color=FFFFFF --logo-width=100 --assets-path=assets --flavor=main"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
@@ -28,6 +29,7 @@
     "react": "17.0.2",
     "react-hook-form": "^7.29.0",
     "react-native": "0.68.0",
+    "react-native-bootsplash": "^4.1.4",
     "react-native-device-info": "^8.7.0",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-linear-gradient": "^2.5.6",
@@ -38,7 +40,6 @@
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^7.2.8",
@@ -54,7 +55,6 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@react-native-google-signin/google-signin": "^7.2.2",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/drawer": "^6.4.1",
     "babel-jest": "^26.6.3",
@@ -63,7 +63,6 @@
     "metro-react-native-babel-preset": "^0.67.0",
     "react-native-action-button": "^2.8.5",
     "react-native-config": "^1.4.5",
-    "react-native-fbsdk-next": "^7.3.3",
     "react-native-skeleton-placeholder": "^5.0.0",
     "react-native-toast-notifications": "^3.2.3",
     "react-test-renderer": "17.0.2",
