--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-device-info": "^8.7.0",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-network-info": "^5.2.1",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-paper": "^4.12.0",
     "react-native-reanimated": "^2.6.0",
