--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -245,7 +245,7 @@ android {
         }
         release {
             shrinkResources true
-            minifyEnabled true
+            crunchPngs false
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.release
