--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native": "0.68.0",
     "react-native-bootsplash": "^4.1.4",
     "react-native-device-info": "^8.7.0",
+    "react-native-dropdown-picker": "^5.4.0",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-network-info": "^5.2.1",
@@ -42,6 +43,7 @@
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-speedometer": "^1.0.5",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^7.2.8",
