--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-speedometer": "^1.0.5",
     "react-native-svg": "^12.3.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
