mybox updated api

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -293,6 +293,8 @@ dependencies {
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics'
 
+    implementation project(':lottie-react-native')
+
 
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
