--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/stack": "^6.2.1",
     "axios": "^0.26.1",
     "lodash": "^4.17.21",
+    "lottie-react-native": "^5.0.1",
     "moment": "^2.29.2",
     "react": "17.0.2",
     "react-hook-form": "^7.29.0",
