--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^7.2.8",
+    "react-thermometer-component": "^1.0.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
