--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.dropbox">
+  package="com.doorbox.mobile">
 
     <uses-permission android:name="android.permission.INTERNET" />
      <uses-permission android:name="android.permission.CLEAR_APP_USER_DATA"/>
