--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "add-splash": "yarn react-native generate-bootsplash assets/bootsplash_logo_original.png --background-color=FFFFFF --logo-width=100 --assets-path=assets --flavor=main"
   },
   "dependencies": {
+    "@dudigital/react-native-zoomable-view": "^1.1.3",
     "@hookform/resolvers": "^2.8.8",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/checkbox": "^0.5.12",
@@ -28,6 +29,7 @@
     "lodash": "^4.17.21",
     "lottie-react-native": "^5.0.1",
     "moment": "^2.29.2",
+    "native-base": "^3.4.5",
     "react": "17.0.2",
     "react-hook-form": "^7.29.0",
     "react-native": "0.68.0",
@@ -35,6 +37,7 @@
     "react-native-device-info": "^8.7.0",
     "react-native-dropdown-picker": "^5.4.0",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-network-info": "^5.2.1",
     "react-native-onboarding-swiper": "^1.2.0",
@@ -49,6 +52,7 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^7.2.8",
+    "react-thermometer-component": "^1.0.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
