--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-simple-toast": "^1.1.3",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-speedometer": "^1.0.5",
     "react-native-svg": "^12.3.0",
