--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-device-info": "^8.7.0",
     "react-native-dropdown-picker": "^5.4.0",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-lightbox-v2": "^0.9.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-network-info": "^5.2.1",
     "react-native-onboarding-swiper": "^1.2.0",
@@ -51,6 +52,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^9.1.0",
+    "react-native-webview": "^11.18.2",
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
@@ -73,7 +75,6 @@
     "react-native-action-button": "^2.8.5",
     "react-native-config": "^1.4.5",
     "react-native-skeleton-placeholder": "^5.0.0",
-    "react-native-toast-notifications": "^3.2.3",
     "react-test-renderer": "17.0.2",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
